# NetPlay

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: ComponentManager.hpp  Controller.hpp  Event.hpp  Fields.hpp  GameControls.hpp  GameManager.hpp  IComponent.hpp  IField.hpp  INetworker.hpp  IRenderer.hpp  ISystem.hpp  ITexture.hpp  Keyboard.hpp  Object.hpp  PackedData.hpp
Client/include/Components/: AnimatedSprite.hpp  NullComp.hpp  Sprite.hpp  Transform.hpp
Client/include/Systems/: RenderSystem.hpp
Client/include/sys/: InetNetworker.hpp  RendererSDL.hpp  TextureSDL.hpp
Client/include/utils/: debug.hpp
Client/sprites/: .Pause.kra-autosave.kra  .menu_selector.png-autosave.kra  Menu 2.kra  Menu 2.kra~  Menu 2.png~  Menu.kra  Menu.kra~  Menu.png~  Pause.kra  Pause.kra~  Pause.png~  ball.kra  level_1.kra  level_1.kra~  level_1.png~  level_2.kra  menu_about.kra  menu_selector.kra  void.kra
Client/sprites/tiles/: tilemap.kra  tilemap.kra~
Client/src/: ComponentManager.cpp  Controller.cpp  Fields.cpp  GameManager.cpp  Keyboard.cpp  Object.cpp  PackedData.cpp
Client/src/Components/: AnimatedSprite.cpp  Sprite.cpp  Transform.cpp
Client/src/Systems/: RenderSystem.cpp
Client/src/sys/: InetNetworker.cpp  RendererSDL.cpp  TextureSDL.cpp
Client/src/utils/: debug.cpp
Server/: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  test
Server/include/: Client.hpp  ComponentManager.hpp  Controller.hpp  Controls.hpp  Event.hpp  Fields.hpp  GameManager.hpp  IComponent.hpp  IField.hpp  INetworker.hpp  Object.hpp  PackedData.hpp  utils
Server/include/Components/: Collider.hpp  Sprite.hpp  Transform.hpp  TriggerCollider.hpp
Server/include/Systems/: MoveSystem.hpp
Server/include/sys/: InetNetworker.hpp
Server/src/: .GameManager.cpp.swp  Controller.cpp  Fields.cpp  GameManager.cpp  Object.cpp  PackedData.cpp  utils
Server/src/Components/: Collider.cpp  Sprite.cpp  Transform.cpp  TriggerCollider.cpp
Server/src/Systems/: MoveSystem.cpp
Server/src/sys/: InetNetworker.cpp
shared/include/utils/: debug.hpp
shared/src/utils/: debug.cpp
